整理golang知识点

--- a/golang/基础知识/函数基础.md
+++ b/golang/基础知识/函数基础.md
@@ -3,36 +3,275 @@
 ## 📚 学习目标
 掌握Go语言函数的定义、调用、参数传递和高级特性，理解函数式编程概念。
 
-## 🎯 主要内容
+---
 
-### 1. 函数定义和调用
-- 函数声明语法
-- 参数和返回值
-- 命名返回值
-- 可变参数
+## 1. 函数定义和调用
 
-### 2. 函数类型和值
-- 函数作为值
-- 函数类型
-- 高阶函数
+### 1.1 基本函数定义
+```go
+package main
 
-### 3. 闭包
-- 闭包概念
-- 变量捕获
-- 闭包应用场景
+import "fmt"
 
-### 4. 特殊函数
-- init函数
-- main函数
-- 方法与函数区别
+// 定义一个简单的函数
+func greet(name string) {
+    fmt.Printf("你好, %s!\n", name)
+}
 
-## 🛠️ 实践项目
-- 函数式编程练习
-- 回调函数应用
-- 装饰器模式实现
+func main() {
+    greet("张三")
+    greet("李四")
+}
+```
 
-## 📖 相关资源
-- [Go Tour - 函数](https://tour.golang.org/basics/4)
-- [Go语言函数详解](https://golang.org/doc/effective_go.html#functions)
+### 1.2 带返回值的函数
+```go
+package main
 
-*详细内容正在编写中...*
+import "fmt"
+
+// 定义一个带返回值的函数
+func add(a int, b int) int {
+    return a + b
+}
+
+func main() {
+    result := add(10, 20)
+    fmt.Printf("10 + 20 = %d\n", result)
+}
+```
+
+### 1.3 命名返回值
+```go
+package main
+
+import "fmt"
+
+// 使用命名返回值
+func divide(a, b float64) (result float64, err error) {
+    if b == 0 {
+        err = fmt.Errorf("除数不能为零")
+        return
+    }
+    result = a / b
+    return
+}
+
+func main() {
+    res, err := divide(10, 2)
+    if err != nil {
+        fmt.Println("错误:", err)
+    } else {
+        fmt.Printf("10 / 2 = %.2f\n", res)
+    }
+}
+```
+
+---
+
+## 2. 参数传递
+
+### 2.1 值传递
+```go
+package main
+
+import "fmt"
+
+func increment(x int) {
+    x++
+    fmt.Printf("函数内: x = %d\n", x)
+}
+
+func main() {
+    num := 10
+    increment(num)
+    fmt.Printf("函数外: num = %d\n", num)
+}
+```
+
+### 2.2 引用传递
+```go
+package main
+
+import "fmt"
+
+func increment(x *int) {
+    *x++
+    fmt.Printf("函数内: x = %d\n", *x)
+}
+
+func main() {
+    num := 10
+    increment(&num)
+    fmt.Printf("函数外: num = %d\n", num)
+}
+```
+
+### 2.3 可变参数
+```go
+package main
+
+import "fmt"
+
+// 可变参数函数
+func sum(nums ...int) int {
+    total := 0
+    for _, num := range nums {
+        total += num
+    }
+    return total
+}
+
+func main() {
+    fmt.Printf("总和: %d\n", sum(1, 2, 3, 4, 5))
+}
+```
+
+---
+
+## 3. 高级函数特性
+
+### 3.1 匿名函数
+```go
+package main
+
+import "fmt"
+
+func main() {
+    // 定义并调用匿名函数
+    func(name string) {
+        fmt.Printf("你好, %s!\n", name)
+    }("张三")
+}
+```
+
+### 3.2 闭包
+```go
+package main
+
+import "fmt"
+
+// 闭包示例
+func counter() func() int {
+    count := 0
+    return func() int {
+        count++
+        return count
+    }
+}
+
+func main() {
+    c := counter()
+    fmt.Println(c()) // 输出: 1
+    fmt.Println(c()) // 输出: 2
+    fmt.Println(c()) // 输出: 3
+}
+```
+
+---
+
+## 4. 特殊函数
+
+### 4.1 init函数
+```go
+package main
+
+import "fmt"
+
+// init函数在main函数之前执行
+func init() {
+    fmt.Println("初始化操作")
+}
+
+func main() {
+    fmt.Println("主程序开始")
+}
+```
+
+### 4.2 main函数
+```go
+package main
+
+import "fmt"
+
+// main函数是程序的入口
+func main() {
+    fmt.Println("Hello, Go!")
+}
+```
+
+---
+
+## 5. 综合案例：简单计算器
+```go
+package main
+
+import (
+    "fmt"
+    "errors"
+)
+
+// 加法
+func add(a, b float64) float64 {
+    return a + b
+}
+
+// 减法
+func subtract(a, b float64) float64 {
+    return a - b
+}
+
+// 乘法
+func multiply(a, b float64) float64 {
+    return a * b
+}
+
+// 除法
+func divide(a, b float64) (float64, error) {
+    if b == 0 {
+        return 0, errors.New("除数不能为零")
+    }
+    return a / b, nil
+}
+
+func main() {
+    var a, b float64
+    var op string
+
+    fmt.Println("请输入两个数字和操作符 (+, -, *, /):")
+    fmt.Scanf("%f %f %s", &a, &b, &op)
+
+    switch op {
+    case "+":
+        fmt.Printf("%.2f + %.2f = %.2f\n", a, b, add(a, b))
+    case "-":
+        fmt.Printf("%.2f - %.2f = %.2f\n", a, b, subtract(a, b))
+    case "*":
+        fmt.Printf("%.2f * %.2f = %.2f\n", a, b, multiply(a, b))
+    case "/":
+        result, err := divide(a, b)
+        if err != nil {
+            fmt.Println("错误:", err)
+        } else {
+            fmt.Printf("%.2f / %.2f = %.2f\n", a, b, result)
+        }
+    default:
+        fmt.Println("无效的操作符")
+    }
+}
+```
+
+---
+
+## 6. 学习检查点
+
+- [ ] 能正确定义和调用函数
+- [ ] 理解值传递和引用传递的区别
+- [ ] 熟练使用可变参数函数
+- [ ] 掌握匿名函数和闭包的使用
+- [ ] 理解init和main函数的特殊作用
+- [ ] 能用函数实现常见业务逻辑
+
+---
+
+Go语言的函数设计简洁而强大，掌握这些基础将为后续的并发编程和高级特性学习打下坚实基础。
