--- a/golang/基础知识/控制结构.md
+++ b/golang/基础知识/控制结构.md
@@ -1,36 +1,315 @@
 # Go语言控制结构
 
 ## 📚 学习目标
-掌握Go语言的程序流程控制，包括条件语句、循环语句、跳转语句和标签的使用。
+掌握Go语言的程序流程控制，包括条件语句、循环语句、跳转语句、defer和异常处理。
 
-## 🎯 主要内容
+---
 
-### 1. 条件语句
-- if/else语句
-- switch语句
-- 类型开关(type switch)
+## 1. 条件语句
 
-### 2. 循环语句
-- for循环的三种形式
-- range循环
-- 无限循环
+### 1.1 if/else语句
+```go
+package main
 
-### 3. 跳转语句
-- break和continue
-- goto语句
-- 标签的使用
+import "fmt"
 
-### 4. 错误处理相关
-- defer语句
-- panic和recover
+func main() {
+    score := 85
+    if score >= 90 {
+        fmt.Println("优秀")
+    } else if score >= 80 {
+        fmt.Println("良好")
+    } else if score >= 60 {
+        fmt.Println("及格")
+    } else {
+        fmt.Println("不及格")
+    }
 
-## 🛠️ 实践项目
-- 命令行工具开发
-- 算法实现练习
-- 流程控制应用
+    // if语句支持初始化语句
+    if age := 20; age >= 18 {
+        fmt.Printf("成年人，年龄：%d\n", age)
+    }
+}
+```
 
-## 📖 相关资源
-- [Go Tour - 流程控制](https://tour.golang.org/flowcontrol/1)
-- [Effective Go - 控制结构](https://golang.org/doc/effective_go.html#control)
+### 1.2 switch语句
+```go
+package main
 
-*详细内容正在编写中...*
+import "fmt"
+
+func main() {
+    day := 3
+    switch day {
+    case 1:
+        fmt.Println("星期一")
+    case 2:
+        fmt.Println("星期二")
+    case 3, 4, 5:
+        fmt.Println("工作日")
+    case 6, 7:
+        fmt.Println("周末")
+    default:
+        fmt.Println("无效的星期")
+    }
+
+    // switch支持初始化语句
+    switch score := 75; {
+    case score >= 90:
+        fmt.Println("优秀")
+    case score >= 80:
+        fmt.Println("良好")
+    case score >= 60:
+        fmt.Println("及格")
+    default:
+        fmt.Println("不及格")
+    }
+}
+```
+
+### 1.3 类型开关(type switch)
+```go
+package main
+
+import "fmt"
+
+func printType(x interface{}) {
+    switch v := x.(type) {
+    case int:
+        fmt.Printf("int类型: %d\n", v)
+    case string:
+        fmt.Printf("string类型: %s\n", v)
+    case bool:
+        fmt.Printf("bool类型: %t\n", v)
+    default:
+        fmt.Printf("未知类型: %T\n", v)
+    }
+}
+
+func main() {
+    printType(123)
+    printType("hello")
+    printType(true)
+    printType(3.14)
+}
+```
+
+---
+
+## 2. 循环语句
+
+### 2.1 for循环的三种形式
+```go
+package main
+
+import "fmt"
+
+func main() {
+    // 经典for循环
+    for i := 0; i < 5; i++ {
+        fmt.Printf("i = %d\n", i)
+    }
+
+    // 只写条件
+    n := 5
+    for n > 0 {
+        fmt.Printf("n = %d\n", n)
+        n--
+    }
+
+    // 无限循环
+    count := 0
+    for {
+        fmt.Println("无限循环，count =", count)
+        count++
+        if count >= 3 {
+            break
+        }
+    }
+}
+```
+
+### 2.2 range循环
+```go
+package main
+
+import "fmt"
+
+func main() {
+    nums := []int{10, 20, 30, 40}
+    for idx, val := range nums {
+        fmt.Printf("索引: %d, 值: %d\n", idx, val)
+    }
+
+    str := "Go语言"
+    for i, r := range str {
+        fmt.Printf("第%d个字符: %c\n", i, r)
+    }
+
+    m := map[string]int{"张三": 90, "李四": 85}
+    for k, v := range m {
+        fmt.Printf("姓名: %s, 分数: %d\n", k, v)
+    }
+}
+```
+
+---
+
+## 3. 跳转语句
+
+### 3.1 break和continue
+```go
+package main
+
+import "fmt"
+
+func main() {
+    for i := 1; i <= 5; i++ {
+        if i == 3 {
+            continue // 跳过本次循环
+        }
+        if i == 5 {
+            break // 终止循环
+        }
+        fmt.Println(i)
+    }
+}
+```
+
+### 3.2 goto语句和标签
+```go
+package main
+
+import "fmt"
+
+func main() {
+    i := 0
+Loop:
+    if i < 3 {
+        fmt.Printf("goto循环: i = %d\n", i)
+        i++
+        goto Loop
+    }
+    fmt.Println("循环结束")
+}
+```
+
+---
+
+## 4. defer语句
+
+### 4.1 基本用法
+```go
+package main
+
+import "fmt"
+
+func main() {
+    fmt.Println("程序开始")
+    defer fmt.Println("defer语句1")
+    defer fmt.Println("defer语句2")
+    fmt.Println("程序结束")
+}
+// 输出顺序：程序开始 -> 程序结束 -> defer语句2 -> defer语句1
+```
+
+### 4.2 资源释放场景
+```go
+package main
+
+import (
+    "fmt"
+    "os"
+)
+
+func main() {
+    file, err := os.Create("test.txt")
+    if err != nil {
+        fmt.Println("创建文件失败:", err)
+        return
+    }
+    defer file.Close() // 无论函数如何退出，都会关闭文件
+
+    file.WriteString("Hello, Go!")
+    fmt.Println("写入完成")
+}
+```
+
+---
+
+## 5. panic和recover
+
+### 5.1 panic触发异常
+```go
+package main
+
+import "fmt"
+
+func mayPanic(divisor int) {
+    if divisor == 0 {
+        panic("除数不能为零！")
+    }
+    fmt.Println("正常执行")
+}
+
+func main() {
+    mayPanic(1)
+    mayPanic(0)
+    fmt.Println("这行不会被执行")
+}
+```
+
+### 5.2 recover捕获异常
+```go
+package main
+
+import "fmt"
+
+func safeDivide(a, b int) {
+    defer func() {
+        if r := recover(); r != nil {
+            fmt.Println("捕获到异常:", r)
+        }
+    }()
+    fmt.Printf("%d / %d = %d\n", a, b, a/b)
+}
+
+func main() {
+    safeDivide(10, 2)
+    safeDivide(10, 0)
+    fmt.Println("程序继续执行")
+}
+```
+
+---
+
+## 6. 综合案例：九九乘法表
+```go
+package main
+
+import "fmt"
+
+func main() {
+    for i := 1; i <= 9; i++ {
+        for j := 1; j <= i; j++ {
+            fmt.Printf("%d*%d=%2d ", j, i, i*j)
+        }
+        fmt.Println()
+    }
+}
+```
+
+---
+
+## 7. 学习检查点
+
+- [ ] 能熟练使用if/else和switch进行条件判断
+- [ ] 掌握for和range的各种循环写法
+- [ ] 理解break、continue、goto的作用和使用场景
+- [ ] 能正确使用defer进行资源释放
+- [ ] 理解panic和recover的异常处理机制
+- [ ] 能用流程控制语句实现常见业务逻辑
+
+---
+
+Go语言的流程控制简洁高效，掌握这些基础将为后续的函数、并发、错误处理等高级特性打下坚实基础。
