--- a/golang/基础知识/结构体和方法.md
+++ b/golang/基础知识/结构体和方法.md
@@ -3,38 +3,294 @@
 ## 📚 学习目标
 掌握Go语言的结构体定义、方法实现和面向对象编程概念，理解Go的组合设计思想。
 
-## 🎯 主要内容
+---
 
-### 1. 结构体基础
-- 结构体定义和初始化
-- 字段访问和操作
-- 匿名结构体
-- 结构体标签
+## 1. 结构体基础
 
-### 2. 方法定义
-- 值接收者方法
-- 指针接收者方法
-- 方法集合
-- 方法表达式和值
+### 1.1 结构体定义和初始化
+```go
+package main
 
-### 3. 结构体嵌入
-- 匿名字段
-- 方法提升
-- 组合vs继承
-- 嵌入接口
+import "fmt"
 
-### 4. 构造函数模式
-- 工厂函数
-- 选项模式
-- 建造者模式
+// 定义结构体
+type Person struct {
+    Name string
+    Age  int
+    City string
+}
 
-## 🛠️ 实践项目
-- 面向对象设计练习
-- 数据模型实现
-- 设计模式应用
+func main() {
+    // 初始化方式1: 字面量初始化
+    p1 := Person{Name: "张三", Age: 25, City: "北京"}
+    fmt.Printf("p1: %+v\n", p1)
 
-## 📖 相关资源
-- [Go Tour - 结构体](https://tour.golang.org/moretypes/2)
-- [Effective Go - 结构体](https://golang.org/doc/effective_go.html#composite_literals)
+    // 初始化方式2: 部分字段初始化
+    p2 := Person{Name: "李四"}
+    fmt.Printf("p2: %+v\n", p2)
 
-*详细内容正在编写中...*
+    // 初始化方式3: 零值初始化
+    var p3 Person
+    fmt.Printf("p3: %+v\n", p3)
+}
+```
+
+### 1.2 字段访问和操作
+```go
+package main
+
+import "fmt"
+
+type Person struct {
+    Name string
+    Age  int
+}
+
+func main() {
+    p := Person{Name: "张三", Age: 25}
+
+    // 访问字段
+    fmt.Printf("姓名: %s, 年龄: %d\n", p.Name, p.Age)
+
+    // 修改字段
+    p.Age = 26
+    fmt.Printf("修改后年龄: %d\n", p.Age)
+}
+```
+
+### 1.3 匿名结构体
+```go
+package main
+
+import "fmt"
+
+func main() {
+    // 定义匿名结构体
+    student := struct {
+        Name  string
+        Grade int
+    }{
+        Name:  "李四",
+        Grade: 90,
+    }
+
+    fmt.Printf("学生: %+v\n", student)
+}
+```
+
+---
+
+## 2. 方法定义
+
+### 2.1 值接收者方法
+```go
+package main
+
+import "fmt"
+
+type Rectangle struct {
+    Width  float64
+    Height float64
+}
+
+// 值接收者方法
+func (r Rectangle) Area() float64 {
+    return r.Width * r.Height
+}
+
+func main() {
+    rect := Rectangle{Width: 10, Height: 5}
+    fmt.Printf("面积: %.2f\n", rect.Area())
+}
+```
+
+### 2.2 指针接收者方法
+```go
+package main
+
+import "fmt"
+
+type Counter struct {
+    Value int
+}
+
+// 指针接收者方法
+func (c *Counter) Increment() {
+    c.Value++
+}
+
+func main() {
+    counter := Counter{Value: 0}
+    counter.Increment()
+    fmt.Printf("计数器值: %d\n", counter.Value)
+}
+```
+
+---
+
+## 3. 结构体嵌入
+
+### 3.1 匿名字段
+```go
+package main
+
+import "fmt"
+
+type Address struct {
+    City  string
+    State string
+}
+
+type Person struct {
+    Name    string
+    Age     int
+    Address // 匿名字段
+}
+
+func main() {
+    p := Person{Name: "张三", Age: 25, Address: Address{City: "北京", State: "中国"}}
+    fmt.Printf("姓名: %s, 城市: %s, 国家: %s\n", p.Name, p.City, p.State)
+}
+```
+
+### 3.2 方法提升
+```go
+package main
+
+import "fmt"
+
+type Address struct {
+    City string
+}
+
+func (a Address) GetCity() string {
+    return a.City
+}
+
+type Person struct {
+    Name    string
+    Address // 匿名字段
+}
+
+func main() {
+    p := Person{Name: "张三", Address: Address{City: "北京"}}
+    fmt.Printf("城市: %s\n", p.GetCity()) // 方法提升
+}
+```
+
+---
+
+## 4. 构造函数模式
+
+### 4.1 工厂函数
+```go
+package main
+
+import "fmt"
+
+type Person struct {
+    Name string
+    Age  int
+}
+
+func NewPerson(name string, age int) Person {
+    return Person{Name: name, Age: age}
+}
+
+func main() {
+    p := NewPerson("张三", 25)
+    fmt.Printf("创建的Person: %+v\n", p)
+}
+```
+
+### 4.2 选项模式
+```go
+package main
+
+import "fmt"
+
+type Config struct {
+    Host string
+    Port int
+    TLS  bool
+}
+
+func NewConfig(options ...func(*Config)) Config {
+    cfg := Config{
+        Host: "localhost",
+        Port: 8080,
+        TLS:  false,
+    }
+    for _, option := range options {
+        option(&cfg)
+    }
+    return cfg
+}
+
+func WithHost(host string) func(*Config) {
+    return func(cfg *Config) {
+        cfg.Host = host
+    }
+}
+
+func WithTLS(tls bool) func(*Config) {
+    return func(cfg *Config) {
+        cfg.TLS = tls
+    }
+}
+
+func main() {
+    cfg := NewConfig(WithHost("example.com"), WithTLS(true))
+    fmt.Printf("配置: %+v\n", cfg)
+}
+```
+
+---
+
+## 5. 综合案例：员工管理系统
+```go
+package main
+
+import "fmt"
+
+type Employee struct {
+    ID     int
+    Name   string
+    Salary float64
+}
+
+type Manager struct {
+    Employee
+    Department string
+}
+
+func (e Employee) GetDetails() string {
+    return fmt.Sprintf("ID: %d, 姓名: %s, 工资: %.2f", e.ID, e.Name, e.Salary)
+}
+
+func (m Manager) GetDetails() string {
+    return fmt.Sprintf("%s, 部门: %s", m.Employee.GetDetails(), m.Department)
+}
+
+func main() {
+    emp := Employee{ID: 101, Name: "张三", Salary: 5000}
+    mgr := Manager{Employee: Employee{ID: 102, Name: "李四", Salary: 8000}, Department: "研发"}
+
+    fmt.Println(emp.GetDetails())
+    fmt.Println(mgr.GetDetails())
+}
+```
+
+---
+
+## 6. 学习检查点
+
+- [ ] 能正确定义和初始化结构体
+- [ ] 理解值接收者和指针接收者方法的区别
+- [ ] 掌握结构体嵌入和方法提升的使用
+- [ ] 能用构造函数模式创建结构体实例
+- [ ] 能用结构体实现常见业务逻辑
+
+---
+
+Go语言的结构体和方法设计简洁而强大，掌握这些基础将为后续的接口、多态和高级特性学习打下坚实基础。
