--- a/golang/并发编程/同步机制.md
+++ b/golang/并发编程/同步机制.md
@@ -1,47 +1,246 @@
 # Go语言同步机制
 
 ## 📚 学习目标
-掌握Go语言sync包提供的同步原语，学会在适当场景下使用传统同步工具。
+掌握Go语言的同步机制，包括互斥锁、读写锁、条件变量等，理解并发安全的实现方式。
 
-## 🎯 主要内容
+---
 
-### 1. Mutex互斥锁
-- sync.Mutex基础用法
-- 锁的获取和释放
-- 临界区保护
-- 死锁预防
+## 1. 互斥锁
 
-### 2. RWMutex读写锁
-- 读写锁概念
-- 读锁和写锁
-- 性能优化场景
-- 锁升级和降级
+### 1.1 使用`sync.Mutex`实现互斥
+```go
+package main
 
-### 3. WaitGroup等待组
-- WaitGroup用法
-- Add、Done、Wait操作
-- 并发任务同步
-- 错误处理
+import (
+    "fmt"
+    "sync"
+)
 
-### 4. Once单次执行
-- sync.Once机制
-- 单例模式实现
-- 初始化保证
-- 性能考虑
+var (
+    counter int
+    mutex   sync.Mutex
+)
 
-### 5. 其他同步工具
-- sync.Cond条件变量
-- sync.Pool对象池
-- sync.Map并发安全map
-- atomic原子操作
+func increment() {
+    for i := 0; i < 1000; i++ {
+        mutex.Lock()   // 加锁
+        counter++
+        mutex.Unlock() // 解锁
+    }
+}
 
-## 🛠️ 实践项目
-- 线程安全数据结构
-- 资源池实现
-- 缓存系统
+func main() {
+    var wg sync.WaitGroup
+    wg.Add(2)
 
-## 📖 相关资源
-- [sync包文档](https://golang.org/pkg/sync/)
-- [并发编程最佳实践](https://golang.org/doc/effective_go.html#concurrency)
+    go func() {
+        defer wg.Done()
+        increment()
+    }()
 
-*详细内容正在编写中...*
+    go func() {
+        defer wg.Done()
+        increment()
+    }()
+
+    wg.Wait()
+    fmt.Println("最终计数器值:", counter)
+}
+```
+
+---
+
+## 2. 读写锁
+
+### 2.1 使用`sync.RWMutex`实现读写锁
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+)
+
+var (
+    data  int
+    rwMux sync.RWMutex
+)
+
+func readData() {
+    rwMux.RLock() // 加读锁
+    fmt.Println("读取数据:", data)
+    rwMux.RUnlock() // 解读锁
+}
+
+func writeData(value int) {
+    rwMux.Lock() // 加写锁
+    data = value
+    fmt.Println("写入数据:", data)
+    rwMux.Unlock() // 解写锁
+}
+
+func main() {
+    var wg sync.WaitGroup
+    wg.Add(3)
+
+    go func() {
+        defer wg.Done()
+        writeData(42)
+    }()
+
+    go func() {
+        defer wg.Done()
+        readData()
+    }()
+
+    go func() {
+        defer wg.Done()
+        readData()
+    }()
+
+    wg.Wait()
+}
+```
+
+---
+
+## 3. 条件变量
+
+### 3.1 使用`sync.Cond`实现条件变量
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+    "time"
+)
+
+var (
+    ready bool
+    cond  = sync.NewCond(&sync.Mutex{})
+)
+
+func worker(id int) {
+    cond.L.Lock()
+    for !ready {
+        cond.Wait() // 等待条件满足
+    }
+    fmt.Printf("工人%d开始工作\n", id)
+    cond.L.Unlock()
+}
+
+func main() {
+    for i := 1; i <= 3; i++ {
+        go worker(i)
+    }
+
+    time.Sleep(time.Second)
+    cond.L.Lock()
+    ready = true
+    cond.L.Unlock()
+    cond.Broadcast() // 通知所有等待的协程
+}
+```
+
+---
+
+## 4. 原子操作
+
+### 4.1 使用`sync/atomic`实现原子操作
+```go
+package main
+
+import (
+    "fmt"
+    "sync/atomic"
+)
+
+var counter int64
+
+func increment() {
+    for i := 0; i < 1000; i++ {
+        atomic.AddInt64(&counter, 1) // 原子加操作
+    }
+}
+
+func main() {
+    var wg sync.WaitGroup
+    wg.Add(2)
+
+    go func() {
+        defer wg.Done()
+        increment()
+    }()
+
+    go func() {
+        defer wg.Done()
+        increment()
+    }()
+
+    wg.Wait()
+    fmt.Println("最终计数器值:", counter)
+}
+```
+
+---
+
+## 5. 综合案例：并发安全的缓存
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+)
+
+type Cache struct {
+    data map[string]string
+    mux  sync.RWMutex
+}
+
+func (c *Cache) Get(key string) string {
+    c.mux.RLock()
+    defer c.mux.RUnlock()
+    return c.data[key]
+}
+
+func (c *Cache) Set(key, value string) {
+    c.mux.Lock()
+    defer c.mux.Unlock()
+    c.data[key] = value
+}
+
+func main() {
+    cache := Cache{data: make(map[string]string)}
+
+    var wg sync.WaitGroup
+    wg.Add(2)
+
+    go func() {
+        defer wg.Done()
+        cache.Set("name", "Go语言")
+    }()
+
+    go func() {
+        defer wg.Done()
+        fmt.Println("读取缓存:", cache.Get("name"))
+    }()
+
+    wg.Wait()
+}
+```
+
+---
+
+## 6. 学习检查点
+
+- [ ] 理解互斥锁的基本概念和使用方式
+- [ ] 掌握读写锁的特点和应用场景
+- [ ] 能用条件变量实现复杂的同步逻辑
+- [ ] 理解原子操作的性能优势
+- [ ] 能用同步机制实现并发安全的程序
+
+---
+
+同步机制是Go语言并发编程的重要工具，掌握这些基础将为后续的并发设计模式学习打下坚实基础。
