--- a/golang/高级特性/泛型编程.md
+++ b/golang/高级特性/泛型编程.md
@@ -1,47 +1,184 @@
 # Go语言泛型编程
 
 ## 📚 学习目标
-掌握Go 1.18+引入的泛型特性，学会使用类型参数编写通用、类型安全的代码。
+掌握Go语言的泛型编程特性，理解类型参数和约束的使用，学会设计灵活的泛型函数和数据结构。
 
-## 🎯 主要内容
+---
 
-### 1. 泛型基础
-- 泛型概念和优势
-- 类型参数语法
-- 类型约束基础
-- 类型推断机制
+## 1. 泛型简介
 
-### 2. 类型约束
-- 接口约束
-- 类型集合约束
-- 嵌入约束
-- 自定义约束
+### 1.1 什么是泛型
+- 泛型是一种编程技术，允许函数和数据结构使用类型参数。
+- Go语言在1.18版本中引入了泛型支持。
 
-### 3. 泛型函数
-- 泛型函数定义
-- 多类型参数
-- 类型推断规则
-- 实例化过程
+---
 
-### 4. 泛型类型
-- 泛型结构体
-- 泛型接口
-- 类型别名
-- 方法集合
+## 2. 泛型函数
 
-### 5. 高级特性
-- 类型开关
-- 反射与泛型
-- 性能考虑
-- 最佳实践
+### 2.1 定义泛型函数
+```go
+package main
 
-## 🛠️ 实践项目
-- 通用数据结构
-- 函数式编程库
-- 类型安全容器
+import "fmt"
 
-## 📖 相关资源
-- [Go泛型教程](https://golang.org/doc/tutorial/generics)
-- [类型参数提案](https://go.googlesource.com/proposal/+/refs/heads/master/design/43651-type-parameters.md)
+// 泛型函数
+func Add[T int | float64](a, b T) T {
+    return a + b
+}
 
-*详细内容正在编写中...*
+func main() {
+    fmt.Println("整数相加:", Add(10, 20))
+    fmt.Println("浮点数相加:", Add(3.14, 2.71))
+}
+```
+
+### 2.2 使用类型参数
+- 类型参数通过`[T]`语法定义。
+- 类型参数可以指定约束。
+
+---
+
+## 3. 类型约束
+
+### 3.1 使用`constraints`包定义约束
+```go
+package main
+
+import (
+    "fmt"
+    "golang.org/x/exp/constraints"
+)
+
+// 泛型函数，支持任何可比较的类型
+func Max[T constraints.Ordered](a, b T) T {
+    if a > b {
+        return a
+    }
+    return b
+}
+
+func main() {
+    fmt.Println("最大值:", Max(10, 20))
+    fmt.Println("最大值:", Max("Go", "Python"))
+}
+```
+
+---
+
+## 4. 泛型数据结构
+
+### 4.1 定义泛型结构体
+```go
+package main
+
+import "fmt"
+
+// 泛型结构体
+type Pair[T any] struct {
+    First  T
+    Second T
+}
+
+func main() {
+    intPair := Pair[int]{First: 1, Second: 2}
+    stringPair := Pair[string]{First: "Hello", Second: "World"}
+
+    fmt.Printf("整数对: %+v\n", intPair)
+    fmt.Printf("字符串对: %+v\n", stringPair)
+}
+```
+
+### 4.2 使用`any`表示任意类型
+- `any`是Go语言的内置类型，表示任意类型。
+
+---
+
+## 5. 泛型方法
+
+### 5.1 定义泛型方法
+```go
+package main
+
+import "fmt"
+
+// 泛型结构体
+type Container[T any] struct {
+    items []T
+}
+
+// 泛型方法
+func (c *Container[T]) Add(item T) {
+    c.items = append(c.items, item)
+}
+
+func (c *Container[T]) GetAll() []T {
+    return c.items
+}
+
+func main() {
+    intContainer := Container[int]{}
+    intContainer.Add(1)
+    intContainer.Add(2)
+    fmt.Println("整数容器:", intContainer.GetAll())
+
+    stringContainer := Container[string]{}
+    stringContainer.Add("Go")
+    stringContainer.Add("Python")
+    fmt.Println("字符串容器:", stringContainer.GetAll())
+}
+```
+
+---
+
+## 6. 综合案例：泛型队列
+```go
+package main
+
+import "fmt"
+
+// 泛型队列
+type Queue[T any] struct {
+    items []T
+}
+
+func (q *Queue[T]) Enqueue(item T) {
+    q.items = append(q.items, item)
+}
+
+func (q *Queue[T]) Dequeue() (T, bool) {
+    if len(q.items) == 0 {
+        var zero T
+        return zero, false
+    }
+    item := q.items[0]
+    q.items = q.items[1:]
+    return item, true
+}
+
+func main() {
+    intQueue := Queue[int]{}
+    intQueue.Enqueue(1)
+    intQueue.Enqueue(2)
+    fmt.Println("出队:", intQueue.Dequeue())
+    fmt.Println("出队:", intQueue.Dequeue())
+
+    stringQueue := Queue[string]{}
+    stringQueue.Enqueue("Go")
+    stringQueue.Enqueue("Python")
+    fmt.Println("出队:", stringQueue.Dequeue())
+    fmt.Println("出队:", stringQueue.Dequeue())
+}
+```
+
+---
+
+## 7. 学习检查点
+
+- [ ] 理解泛型的基本概念和使用方式
+- [ ] 掌握类型参数和约束的定义
+- [ ] 能用泛型设计灵活的函数和数据结构
+- [ ] 理解泛型在实际项目中的应用场景
+
+---
+
+泛型编程是Go语言的高级特性，掌握这些基础将显著提升程序的灵活性和可维护性。
