--- a/golang/高级特性/运行时系统.md
+++ b/golang/高级特性/运行时系统.md
@@ -1,47 +1,106 @@
 # Go语言运行时系统
 
 ## 📚 学习目标
-深入理解Go语言运行时系统的内部机制，掌握调度器、内存管理和系统调用处理。
+掌握Go语言运行时系统的架构和工作原理，理解调度器、内存管理和垃圾回收的实现方式。
 
-## 🎯 主要内容
+---
 
-### 1. 运行时架构
-- 运行时组件概览
-- 启动和初始化过程
-- 运行时数据结构
-- 系统接口抽象
+## 1. 运行时架构
 
-### 2. G-M-P调度模型
-- Goroutine(G)结构
-- Machine(M)线程
-- Processor(P)处理器
-- 调度策略和算法
+### 1.1 Go运行时的组成
+- **调度器**: 管理Goroutine的执行。
+- **内存管理**: 提供高效的内存分配和回收。
+- **垃圾回收**: 清理不再使用的内存。
+- **系统调用**: 与操作系统交互。
 
-### 3. 系统调用处理
-- 阻塞调用处理
-- 非阻塞调用优化
-- 网络轮询器
-- 系统调用包装
+---
 
-### 4. 栈管理
-- 分段栈实现
-- 栈扩容和收缩
-- 栈扫描机制
-- 栈溢出保护
+## 2. 调度器
 
-### 5. 运行时调试
-- GODEBUG环境变量
-- 运行时统计信息
-- 调度器trace
-- 性能监控接口
+### 2.1 G-M-P模型
+- **Goroutine (G)**: 轻量级协程。
+- **Machine (M)**: 操作系统线程。
+- **Processor (P)**: 调度器的逻辑处理器。
 
-## 🛠️ 实践项目
-- 运行时监控工具
-- 调度器分析器
-- 系统调用跟踪
+### 2.2 Goroutine的调度
+- Go调度器基于抢占式调度。
+- Goroutine之间的切换由Go运行时控制。
 
-## 📖 相关资源
-- [Go运行时设计文档](https://golang.org/s/go11sched)
-- [The Go scheduler](https://morsmachine.dk/go-scheduler)
+---
 
-*详细内容正在编写中...*
+## 3. 内存管理
+
+### 3.1 栈的动态扩展
+- Goroutine的栈初始大小为2KB。
+- 当栈空间不足时，Go运行时会自动扩展栈。
+
+### 3.2 堆的分配和回收
+- 堆用于存储逃逸到函数外的变量。
+- Go运行时通过垃圾回收管理堆内存。
+
+---
+
+## 4. 垃圾回收
+
+### 4.1 三色标记法
+- **白色**: 未访问的对象，待回收。
+- **灰色**: 已访问但未处理的对象。
+- **黑色**: 已访问且处理完成的对象。
+
+### 4.2 垃圾回收的触发条件
+- 内存分配达到阈值。
+- 手动调用`runtime.GC()`。
+
+---
+
+## 5. 系统调用
+
+### 5.1 使用`runtime`包进行系统调用
+```go
+package main
+
+import (
+    "fmt"
+    "runtime"
+)
+
+func main() {
+    fmt.Println("CPU数量:", runtime.NumCPU())
+    fmt.Println("Goroutine数量:", runtime.NumGoroutine())
+}
+```
+
+---
+
+## 6. 综合案例：运行时调试工具
+```go
+package main
+
+import (
+    "fmt"
+    "runtime"
+)
+
+func main() {
+    fmt.Println("运行时信息:")
+    fmt.Printf("CPU数量: %d\n", runtime.NumCPU())
+    fmt.Printf("Goroutine数量: %d\n", runtime.NumGoroutine())
+
+    runtime.GC() // 手动触发垃圾回收
+    fmt.Println("垃圾回收完成")
+}
+```
+
+---
+
+## 7. 学习检查点
+
+- [ ] 理解Go运行时的架构和组成
+- [ ] 掌握调度器的工作原理
+- [ ] 理解内存管理的动态扩展机制
+- [ ] 能用垃圾回收优化内存使用
+- [ ] 能用运行时工具调试程序
+
+---
+
+运行时系统是Go语言的核心特性之一，掌握这些基础将显著提升程序的性能和稳定性。
